--- a/templates/studentDashboard.html
+++ b/templates/studentDashboard.html
@@ -33,11 +33,13 @@
 
             <div class="section-title">Enrollled Courses</div>
 
+            {% for class in enrolled_classes %}
             <div class="course-card">
-                <div class="course-title">CS 322 - SOFTWARE ENGINEERING</div>
-                <div class="course-code">CS 3201</div>
+                <div class="course-title">{{ class.class_name }}</div>
+                <div class="course-code">{{ class.class_code }}</div>
                 <div class="course-menu">...</div>
             </div>
+            {% endfor %}
         </div>
     </div>
 
@@ -47,9 +49,7 @@
     <!-- QR Code Modal -->
     <div class="modal">
         <div class="qr-placeholder">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z" />
-            </svg>
+            <img id="qr-image" src="" alt="QR Code" width="200" height="200">
         </div>
         <button class="upload-btn">Scan QR Code</button>
     </div>
